Archive2/38/e31af41db63df0/output
main.cpp: In constructor 'Vec::Vector::Vector(std::vector<float>&)':
main.cpp:24:26: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
             if (v.size() > size)
                          ^
main.cpp: In constructor 'Mat4::Mat4(std::initializer_list<Vec::Vector>)':
main.cpp:428:43: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
             if (i.representation().size() > vecSize)
                                           ^
main.cpp: In function 'Mat4 rotateAntiClockwise(const Mat4&)':
main.cpp:523:33: error: 'begin' was not declared in this scope
             for (auto k : rows[j])
                                 ^
main.cpp:523:33: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.2/bits/basic_string.h:42:0,
                 from /usr/local/include/c++/4.9.2/string:52,
                 from /usr/local/include/c++/4.9.2/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.2/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.2/ios:42,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/initializer_list:89:5: note:   'std::begin'
     begin(initializer_list<_Tp> __ils) noexcept
     ^
main.cpp:523:33: error: 'end' was not declared in this scope
             for (auto k : rows[j])
                                 ^
main.cpp:523:33: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.2/bits/basic_string.h:42:0,
                 from /usr/local/include/c++/4.9.2/string:52,
                 from /usr/local/include/c++/4.9.2/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.2/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.2/ios:42,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/initializer_list:99:5: note:   'std::end'
     end(initializer_list<_Tp> __ils) noexcept
     ^
